# TRIM

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_AND_CONTENT_RIGHTS.md  pyproject.toml
artifacts/: TRIM_HAA_pilot_ethics_package_v0_1.zip.sha256  TRIM_HAA_position_note_v0_1.zip.sha256  TRIM_HAA_position_note_v0_2.zip.sha256
data/: ._demo_annotations.csv  blinded_pilot_case_manifest.csv  blinded_pilot_coding_template.csv  blinded_pilot_source_packet.md  cross_language_layer_annotations_template.csv  cross_language_pair_comparisons_template.csv  cross_language_validity_template.csv  demo_annotations.csv  demo_annotations.json  demo_annotations_second_coder_template.csv  in_a_grove_three_cases_with_segments.csv  retest_v0_2_1_case_manifest.csv  retest_v0_2_1_coder_return_manifest_template.csv  retest_v0_2_1_coding_template.csv  retest_v0_2_1_frozen_file_hashes.csv  retest_v0_2_1_language_access_form.csv  retest_v0_2_1_practice_cases.md  retest_v0_2_1_research_manifest.csv  retest_v0_2_1_shared_context_registry.csv  retest_v0_2_1_source_packet.md  retest_v0_2_1_source_text_provenance.csv  retest_v0_2_2_coder_return_manifest_template.csv  retest_v0_2_2_coding_template.csv  retest_v0_2_2_frozen_file_hashes.csv  retest_v0_2_2_practice_cases.md  retest_v0_2_2_question_log_template.csv  retest_v0_2_2_research_manifest.csv  retest_v0_2_2_shared_context_registry.csv  retest_v0_2_2_source_packet.md  second_coder_practice_cases.csv  source_segments_demo.csv  trim_haa_assistance_provenance_template.csv  trim_haa_core_template.csv  trim_haa_depth_template.csv  trim_haa_exposure_event_template.csv  trim_haa_lock_manifest_template.csv  trim_haa_model_run_manifest_template.csv  trim_haa_prompt_manifest_template.csv
docs/: ._TRIM_Coding_Manual_v0_2_friction_locus_final.md  ._TRIM_codebook_v0_1_1.md  .reference_verification_note  TRIM_Coding_Manual_v0_2_1_friction_locus.md  TRIM_Coding_Manual_v0_2_1_rationale_mechanism.md  TRIM_Coding_Manual_v0_2_2_friction_locus.md  TRIM_Coding_Manual_v0_2_2_rationale_mechanism.md  TRIM_Coding_Manual_v0_2_friction_locus_final.md  TRIM_Coding_Manual_v0_2_rationale_mechanism.md  TRIM_HAA_assistance_provenance.md  TRIM_HAA_construct_definitions.md  TRIM_HAA_control_condition.md  TRIM_HAA_core_schema.md  TRIM_HAA_ethics_preparation.md  TRIM_HAA_exposure_events.md  TRIM_HAA_locking_and_lineage.md  TRIM_HAA_migration_from_TRIM.md  TRIM_HAA_minimum_pilot_protocol.md  TRIM_HAA_overview.md  TRIM_HAA_reporting_limits.md  TRIM_codebook_v0_1_1.md  TRIM_codebook_v0_1_2.md  TRIM_codebook_v0_2_0.md  TRIM_codebook_v0_2_1.md  TRIM_codebook_v0_2_2.md  ai_execution_comparison_protocol.md  alpha_release_procedure.md  article_use.md  blinded_pilot_protocol.md  core_indexing_migration_note.md  core_schema.md  cross_language_validity.md  demo_dataset_notes.md  discourse_level_guide_v0_2_1.md  discourse_level_guide_v0_2_2.md  exposure_audit.md  human_retest_analysis_readiness.md  index.md  intercoder_workflow.md  intercoder_workflow_v0_2_1.md  (+38 more)
(+511 files in other folders)
