[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trim-haa"
version = "0.3.0a1"
description = "TRIM-HAA provenance-aware human-AI annotation audit tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Zhiji Wang" }
]
dependencies = []

[project.scripts]
trim-haa = "trim_haa.cli:main"

[project.optional-dependencies]
llm = [
  "jsonschema>=4.18"
]
reporting = [
  "pandas"
]
test = [
  "pytest",
  "build",
  "jsonschema>=4.18",
  "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["trim_haa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
