[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trim-haa"
version = "0.3.0a1"
description = "TRIM-HAA provenance-aware human-AI annotation audit tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
  "annotation",
  "human-ai",
  "provenance",
  "research-software",
]
authors = [
  { name = "Zhiji Wang" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ZhijiWang/TRIM"
Documentation = "https://github.com/ZhijiWang/TRIM/tree/main/docs"
Repository = "https://github.com/ZhijiWang/TRIM"
Issues = "https://github.com/ZhijiWang/TRIM/issues"

[project.scripts]
trim-haa = "trim_haa.cli:main"

[project.optional-dependencies]
reporting = [
  "pandas"
]
test = [
  "pytest",
  "build",
  "jsonschema>=4.18",
  "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["trim_haa*"]
exclude = [
  "trim_haa.llm",
  "trim_haa.llm.*",
  "trim_haa.human_coding",
  "trim_haa.human_coding.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
